Fixed Reset and now fixing style files

--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -1,7 +1,18 @@
 /* ***************** utilities & containers ***************** */
 
 /* ***************** global typography ***************** */
-
+h1,
+h2,
+h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
 /* ***************** header & footer ***************** */
+header{
+    width: 108rem;
+    height: 5.6875rem;
+    background-color: #0C4A6E;
+    color: white;
+}
 
 /* ***************** main content ***************** */
