--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/css/styles.css
@@ -1,18 +1,162 @@
 /* ***************** utilities & containers ***************** */
 
-/* ***************** global typography ***************** */
-h1,
-h2,
-h3 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+.container {
+    width: 1528px;
+    margin: 0 auto;
 }
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+}
+
+
+/* ***************** global typography ***************** */
+
+h1 {
+    color: var(--Off-White, #FAFAFA);
+    font-family: Arial;
+    font-size: 1.625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    /* 2.4375rem */
+}
+
+h2 {
+    color: var(--Black, #000);
+    font-family: Arial;
+    font-size: 3.75rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    /* 5.625rem */
+}
+
+h3 {
+    color: var(--Black, #000);
+    font-family: Arial;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    /* 5.625rem */
+}
+
+h4 {
+    color: var(--Black, #000);
+    text-align: center;
+    font-family: Arial;
+    font-size: 2.125rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    /* 3.1875rem */
+}
+
+p {
+    color: var(--Black, #000);
+    font-family: Arial;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    /* 1.5rem */
+}
+
+.plan p {
+    color: var(--Primary-Blue, #0C4A6E);
+    font-family: Arial;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+    /* 2.25rem */
+}
+
+li {
+    color: var(--Black, #000);
+    font-family: Arial;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    /* 1.5rem */
+}
+
+footer p {
+    color: var(--Off-White, #FAFAFA);
+    font-family: Arial;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    /* 1.5rem */
+}
+
+cite {
+    color: var(--Off-White, #FAFAFA);
+    font-family: Arial;
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 150%;
+    /* 1.5rem */
+}
+
 /* ***************** header & footer ***************** */
-header{
-    width: 108rem;
-    height: 5.6875rem;
-    background-color: #0C4A6E;
-    color: white;
+
+header {
+    background-color: var(--Primary-Blue, #0C4A6E);
+    padding-top: 1.62rem;
+    padding-bottom: 1.62rem;
+}
+
+h2 {
+    display: flex;
+    padding-top: 1.75rem;
+    padding-bottom: 1.5rem;
+}
+
+footer {
+    background: var(--Primary-Blue, #0C4A6E);
+    padding-top: 1.62rem;
+    padding-bottom: 1.62rem;
 }
 
 /* ***************** main content ***************** */
+
+.team .flex-container {
+    row-gap: 3.25rem;
+}
+
+.team .flex-container section {
+    background: var(--Grey, linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #F4F4F5);
+    display: flex;
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+    gap: 3.5rem;
+    /*width: calc((100% / 2rem) - (4 - 2) - 4rem);*/
+    }
+
+.team .flex-container section img {
+    max-width: 12.5rem;
+    height: auto;
+}
+
+.team-member {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 26.75rem;
+    height: 17.5rem;
+    align-items: center;
+}
+
+.plans .flex-container .plan {
+    background: var(--Grey, linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #F4F4F5);
+    display: flex;
+    flex-direction: column;
+    gap: 3.5rem;
+    /*width: calc((100% / 3) - (7 - 3) -);*/
+}
